Table users{
   id integer [pk, increment]
   name varchar(255)
   email varchar(255) [unique]
   password varchar(255) 
}
Table categorias{
    id integer [pk, increment]
    nombre varchar(255)
    tipo enum('ingreso',gasto)
}
Table movimientos{
    id integer [pk,increment]
    user_id integer [ref: > users.id]
    categoria_id integer [ref: > categorias.id]
    tipo enum('ingreso','gasto')
    monto decimal(10,2)
    descripcion text
    foto varchar(255)
    fecha datetime
}
Table presupuestos{
    id integer [pk, increment]
    user_id integer [ref: > users.id]
    categoria_id integer [ref: > categorias.id]
    monto_asignado decimal(10,2)
    monto_gastado decimal(10,2)
    mes varchar(20)
    anio integer
}